--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
+    "@material-ui/core": "1.3.1",
+    "@material-ui/icons": "1.1.0",
+    "@okta/okta-react": "1.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.8"
   },
   "scripts": {
