--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "1.3.1",
     "@material-ui/icons": "1.1.0",
     "@okta/jwt-verifier": "0.0.14",
@@ -19,20 +22,21 @@
     "memorystream": "^0.3.1",
     "minimatch": "^3.0.4",
     "moment": "^2.22.2",
+    "nodeman": "^1.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-final-form": "^3.6.4",
+    "react-jss": "^8.6.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.8",
+    "react-sidebar": "^3.0.2",
+    "react-sticky": "^6.0.3",
+    "reactstrap": "^8.0.0",
     "read-pkg": "^5.0.0",
     "recompose": "^0.27.1",
     "sequelize": "^5.6.1",
     "shell-quote": "^1.6.1",
-    "sqlite3": "^4.0.6",
-    "react-jss": "^8.6.1",
-    "react-sidebar": "^3.0.2",
-    "react-sticky": "^6.0.3",
-    "reactstrap": "^8.0.0"
+    "sqlite3": "^4.0.6"
   },
   "scripts": {
     "start": "npm-run-all --parallel watch:server start:web",
