--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/client/node_modules
-/.pnp
+node_modules
+client/node_modules
+.pnp
 .pnp.js
 
 # testing
