--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "memorystream": "^0.3.1",
     "minimatch": "^3.0.4",
     "moment": "^2.22.2",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.11",
     "read-pkg": "^5.0.0",
