--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.22.2",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.11",
+    "react-scripts": "^3.0.0",
     "read-pkg": "^5.0.0",
     "recompose": "^0.27.1",
     "sequelize": "^5.6.1",
