--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "server.js",
   "dependencies": {
+    "@okta/jwt-verifier": "0.0.14",
+    "@okta/okta-auth-js": "^2.5.0",
+    "@okta/okta-react": "^1.2.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
@@ -18,6 +21,8 @@
     "moment": "^2.22.2",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.11",
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.0.0",
     "read-pkg": "^5.0.0",
     "recompose": "^0.27.1",
     "sequelize": "^5.6.1",
