added css styling to the page, header and sidebar

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
     "development": {
       "username": "root",
-      "password": "Lovegod88*",
-      "database": "lopersTracker_db",
+      "password": "Elliott08",
+      "database": "loperstracker_db",
       "host": "127.0.0.1",
       "port": 3306,
       "dialect": "mysql"
