--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "server.js",
   "dependencies": {
+    "@material-ui/core": "^4.0.0-beta.1",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
@@ -13,6 +14,7 @@
     "express": "^4.16.4",
     "final-form": "^4.8.3",
     "lodash": "^4.17.11",
+    "material-ui-colors": "^1.0.0",
     "memorystream": "^0.3.1",
     "minimatch": "^3.0.4",
     "moment": "^2.22.2",
