--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,8 @@
 {
     "development": {
       "username": "root",
-
+      "password": "Lovegod88*",
+      "database": "lopersTracker_db",
       "host": "127.0.0.1",
       "port": 3306,
       "dialect": "mysql"
