--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.22.2",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.11",
+    "npm-run-all": "4.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.0",
